# EasyPcb

./: README.md
conf/: bd_lib_std.bd_xml
help/: EasyPcbHelp.html
src/: CMakeLists.txt  EasyPcb.moc  EasyPcb.pro  EasyPcb.pro.user.46700e4  EasyPcb.pro.user.46700e4.20  EasyPcb.pro.user.c309a3e.4.8-pre1  EasyPcb.pro.user.sXvfVb  EditMultiPlate.cpp  additemcommand.cpp  additemcommand.h  addneweltolibdlg.cpp  addneweltolibdlg.h  addnodecommand.cpp  addnodecommand.h  addvirtconitem.cpp  addvirtconitem.h  autocommanditem.cpp  autocommanditem.h  autoconstructprops.cpp  autoconstructprops.h  autodlg.cpp  autodlg.h  bd.xml  bd_lib_std.bd_xml  boardlayer.cpp  boardlayer.h  boardlayerswrapper.cpp  boardlayerswrapper.h  capgraphicalitem.cpp  capgraphicalitem.h  charger1.bd_xml  common.h  compile_commands.json  componentstreemodel.cpp  componentstreemodel.h  componentstreeview.cpp  componentstreeview.h  connectedrulerwrapper.cpp  connectedrulerwrapper.h  connectorgraphicalitem.cpp  (+123 more)
